[WIP] Add boundaries as parameters for CGMES files export