@@ -16,6 +16,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.EnumMap;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -36,7 +37,7 @@ class SweDataTest {
 
     @Test
     void simpleD2ccTest() {
-        SweData sweData = new SweData("id", "runId", OffsetDateTime.now(), ProcessType.D2CC, network, network, network, network, cracFrEs, cracEsPt, "glskUrl", "CracEsPt", "CracFrEs", "raoParametersEsFrUrl", "raoParametersEsPtUrl", Collections.emptyList(),  new EnumMap<>(CgmesFileType.class));
+        SweData sweData = new SweData("id", "runId", OffsetDateTime.now(), ProcessType.D2CC, network, network, network, network, cracFrEs, cracEsPt, "glskUrl", "CracEsPt", "CracFrEs", "raoParametersEsFrUrl", "raoParametersEsPtUrl", Collections.emptyList(), new EnumMap<>(CgmesFileType.class), List.of());
         assertEquals(ProcessType.D2CC, sweData.getProcessType());
         assertEquals(this.network, sweData.getNetworkEsFr());
         assertEquals(this.cracEsPt, sweData.getCracEsPt());
@@ -51,7 +52,7 @@ class SweDataTest {
 
     @Test
     void simpleIdccTest() {
-        SweData sweData = new SweData("id", "runId", OffsetDateTime.now(), ProcessType.IDCC, network, network, network, network, cracFrEs, cracEsPt, "glskUrl", "CracEsPt", "CracFrEs", "raoParametersEsFrUrl", "raoParametersEsPtUrl", Collections.emptyList(), new EnumMap<>(CgmesFileType.class));
+        SweData sweData = new SweData("id", "runId", OffsetDateTime.now(), ProcessType.IDCC, network, network, network, network, cracFrEs, cracEsPt, "glskUrl", "CracEsPt", "CracFrEs", "raoParametersEsFrUrl", "raoParametersEsPtUrl", Collections.emptyList(), new EnumMap<>(CgmesFileType.class), List.of());
         assertEquals(ProcessType.IDCC, sweData.getProcessType());
         assertEquals(this.network, sweData.getNetworkEsFr());
         assertEquals(this.cracEsPt, sweData.getCracEsPt());
